modificati nomi delle classe
modificati i nomi di header e linkheader con paragraph e paragraphTitle

--- a/css.css
+++ b/css.css
@@ -8,10 +8,10 @@ h1{
   text-align: center;
 }
 
-div.header{
+div.paragraph{
   background-color: #ffff;
 }
 
-span.linkheader{
+span.paragraphTitle{
   background-color: #faff
 }
